cmake_minimum_required(VERSION 3.0)

project(fortran_mooc)

add_subdirectory(arrays)
add_subdirectory(ball_throw)
add_subdirectory(bit_manipulations)
add_subdirectory(blas_lapack)
add_subdirectory(block_matrices)
add_subdirectory(box_counting)
add_subdirectory(buffon_needles)
add_subdirectory(calculator)
add_subdirectory(call_by_semantics)
add_subdirectory(cellular_automata)
add_subdirectory(c_interoperability)
add_subdirectory(clamp)
if (CMAKE_Fortran_COMPILER_ID STREQUAL 'Intel')
    add_subdirectory(coarrays)
endif()
add_subdirectory(command_arguments_and_environment)
add_subdirectory(computing_pi)
add_subdirectory(config_parser)
add_subdirectory(direct_access_io)
add_subdirectory(distance)
add_subdirectory(dynamic_libraries)
add_subdirectory(enumerator)
add_subdirectory(exp_distr)
add_subdirectory(f2py)
add_subdirectory(fibonacci)
add_subdirectory(gcd)
add_subdirectory(generics)
add_subdirectory(hello_fortran)
add_subdirectory(ieee754)
add_subdirectory(io_performance)
add_subdirectory(iterations)
add_subdirectory(julia_set)
add_subdirectory(kaprekar)
add_subdirectory(leapyear)
add_subdirectory(linked_list)
add_subdirectory(logistic_map)
add_subdirectory(mpi)
add_subdirectory(openmp)
add_subdirectory(optional)
add_subdirectory(particles)
add_subdirectory(pointers)
add_subdirectory(primes)
add_subdirectory(quadrature)
add_subdirectory(random_numbers)
add_subdirectory(recursion)
add_subdirectory(reservoir_sampling)
add_subdirectory(sierpinski)
add_subdirectory(statistics)
add_subdirectory(statistics_oo)
add_subdirectory(strings)
add_subdirectory(sum_values)
add_subdirectory(text_io)
add_subdirectory(towers_of_hanoi)
add_subdirectory(type_info)
add_subdirectory(trees)
add_subdirectory(hdf5)
add_subdirectory(neighbours)
add_subdirectory(precision)
add_subdirectory(coins)
add_subdirectory(implicit_loops)
add_subdirectory(linking)
add_subdirectory(preprocessor)
